Делаю replice-paintings

--- a/css/global/variables.css
+++ b/css/global/variables.css
@@ -3,4 +3,6 @@
     --black: #000000;
     --stretch-limo: #2C2D35;
     --molten-ice: #E1EDE6;
+    --mudroch: #598D66;
+    --sandstone-grey-green: #86928B;
 }
