начал делать блок reproductions

--- a/css/pages/header/header.css
+++ b/css/pages/header/header.css
@@ -1,26 +1,31 @@
-.header{
-    padding: 33px 0 33px 0;
-    background-color: var(--molten-ice);
+.header {
+  padding: 33px 0 33px 0;
+  background-color: var(--molten-ice);
 }
 
-.header__container{
-    display: flex;
-    justify-content: space-between;
+.header__container {
+  display: flex;
+  justify-content: space-between;
 }
 
-.header__logo img{
-    width: 100%;
-    height: auto;
+.header__logo img {
+  width: 100%;
+  height: auto;
 }
 
-.header__menu{
-    display: flex;
-    gap: 60px;
+.header__menu {
+  display: flex;
+  gap: 60px;
 }
 
-.header__link{
-    font-family: sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-    color: var(--stretch-limo);
+.header__item {
+  display: flex;
+}
+
+.header__link {
+  display: flex;
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--stretch-limo);
 }
