сделал блок reproductions

--- a/css/global/variables.css
+++ b/css/global/variables.css
@@ -5,4 +5,6 @@
     --molten-ice: #E1EDE6;
     --mudroch: #598D66;
     --sandstone-grey-green: #86928B;
+    --forest-serenade: #376B44;
+    --white-smoke: #F4F6F5;
 }
