--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -1,3 +1,4 @@
 @import url("./common.css");
 @import url("./header/header.css");
 @import url("./replica-paintings/replica-paintings.css");
+@import url("./reproductions/reproductions.css");
