--- a/css/pages/replica-paintings/replica-paintings.css
+++ b/css/pages/replica-paintings/replica-paintings.css
@@ -47,6 +47,7 @@
     font-size: 20px;
     color: var(--mudroch);
 
+    background-color: var(--white);
     border: 1px solid var(--mudroch);
 
     flex: 1 1 227px;
