сделал блок new-collection

--- a/css/global/variables.css
+++ b/css/global/variables.css
@@ -7,4 +7,9 @@
     --sandstone-grey-green: #86928B;
     --forest-serenade: #376B44;
     --white-smoke: #F4F6F5;
+    --splash-down: #D4E8D9;
+    --plastic-lime: #EEDB6D;
+    --calabash: #FAEB97;
+    --nataneyu-gold:#A38314;
+    --buried-gold: #D9B949;
 }
