--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -2,3 +2,4 @@
 @import url("./header/header.css");
 @import url("./replica-paintings/replica-paintings.css");
 @import url("./reproductions/reproductions.css");
+@import url("./new-collection/new-collection.css");
