--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -3,3 +3,4 @@
 @import url("./replica-paintings/replica-paintings.css");
 @import url("./reproductions/reproductions.css");
 @import url("./new-collection/new-collection.css");
+@import url("./team/team.css");
