Реализована часть вёрстки блока footer

--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -4,3 +4,4 @@
 @import url("./reproductions/reproductions.css");
 @import url("./new-collection/new-collection.css");
 @import url("./team/team.css");
+@import url("./footer/footer.css");
