--- a/css/pages/replica-paintings/replica-paintings.css
+++ b/css/pages/replica-paintings/replica-paintings.css
@@ -2,12 +2,12 @@
     display: flex;
     justify-content: space-between;
     gap: 30px;
+    margin-bottom: 70px;
 }
 
 .replica-paintings__bird img{
     width: 540px;
     height: auto;
-
 }
 
 .replica-paintings__content{
@@ -25,7 +25,6 @@
 .replica-paintings__title{
     margin-bottom: 20px;
 
-   
     font-size: 60px;
 }
 
